2003-04-28 18:35  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/NSTextContainer.h: Documented.
	* Source/NSTextContainer.m: Cleanups.

Mon Apr 28 13:14:15 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSApplication.m ([NSApplication -targetForAction:]): If this
	is a document-based application, check if the key window's document
	responds to the action; if it does, use it.

2003-04-28  Nicola Pero  <nicola@nicola.brainstorm.co.uk>

	* Resources/GNUmakefile (gui-resources_RESOURCE_FILES_INSTALL_DIR): Define
	using the full relative path.

2003-04-27  Adam Fedor  <fedor@gnu.org>

	* Source/GSServicesManager.m (+newWithApplication:) Change
	Services to Library/Services.
	* Source/NSWorkspace.m (+initilize): Idem.
	* Tools/make_services.m (main): Idem.

2003-04-27  Adam Fedor  <fedor@gnu.org>

	* Updates for filesystem change.
	* GNUmakefile (GNUSTEP_MAKEFILES): Remove
	* ColorPickers/GNUmakefile, Documentation/GNUmakefile,
	Images/GNUmakefile, KeyBindings/GNUmakefile, Model/GNUmakefile,
	Panels/GNUmakefile, Panels/GNUmakefile.postamble, 
	PrinterTypes/GNUmakefile, PrinterTypes/GNUmakefile.postamble,
	Source/GNUmakefile, TextConverters/GNUmakefile, Tools/GNUmakefile: 
	Idem and update install locations.
	* Resources/GNUmakefile: Update for change in resource-set.make
	* configure.ac: Replace $GNUSTEP_SYSTEM_ROOT/Makefiles with
	$GNUSTEP_MAKEFILES.  Replace Libraries with Library/Libraries.
	Replace Headers with Library/Headers.

	* Source/NSImage.m (+initialize, +imageNamed:): Use
	+pathForLibraryResource:ofType:inDirectory.
	* Source/NSPrintInfo (+initPrintInfoDefaults): Idem.
	* Source/NSPrinter.m (getFile): Idem.
	* Source/NSSound.m (+initialize, +soundNamed:): Idem.
	* Source/NSView.m (-_loadPrinterProlog): Idem.

	* Source/NSPageLayout.m
	(-initWithContentRect:styleMask:backing:defer:screen:): Use
	GSGuiBundle to get resources.
	* Source/NSPrintPanel.m
	( -initWithContentRect:styleMask:backing:defer:screen:): Idem.